# platform

./: .angular-cli.json  .angulardoc.json  .bazelrc  .dockerignore  .editorconfig  .eslintrc.json  .firebaserc  .gitignore  .node-version  .nxignore  .prettierignore  0001-with-meta-reducer-for-signals-events.md  404.html  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FOLLOW_UP_TASKS.md  LICENSE  MIGRATION.md  README.md  WORKSPACE  angular-metadata.tsconfig.json  angular.json  circle.yml  cypress.json  eslint.config.mjs  firebase.json  inline.06624f06eff87dc43c5f.bundle.js  jest.config.js  jest.config.ts  jest.preset.js  karma.conf.js  lerna.json  main.3f4914d53cf2243865b0.bundle.js  migrate-content.js  migrations.json  ng-snapshot.js  ngrx-21.md  (+19 more)
.circleci/: bazel.rc  config.yml
.devcontainer/: devcontainer.json  welcome-message.txt
.firebase/: hosting.ZGlzdC9wcm9qZWN0cy93d3cvYW5hbG9nL3B1YmxpYw.cache
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  labeler.yml
codegen/: codegen.js  codegen.metadata.json  public_api.js
e2e/: app.e2e-spec.ts  app.po.ts  tsconfig.e2e.json
effects/: LICENSE  README.md  effects.d.ts  effects.js  effects.metadata.json  public_api.js  testing.d.ts  testing.metadata.json
entity/: entity.js  entity.metadata.json  package.json  public_api.js
example-app/: 0.0dec36366628328f2b94.chunk.js  0.59c2840404dc785f61d5.chunk.js  0.d844fc39f30ab2b46bd4.chunk.js  3rdpartylicenses.txt  4.3e51a39f80b3dde5cd7b.js  4.4d362735ef8201a05455.js  404.html  README.md  index.html  inline.1c4b583d9a7fc0a581d3.bundle.js  inline.e90a9b88c45cd91477c7.bundle.js  main.00051a7b63e1e00b3272.js  main.00799f49d0504109fd47.js  main.68fe65c32c0468c54288.bundle.js  main.71e7215d135c3e8b34fd.js  main.afbd4cc6d1eb3073d8f6.bundle.js  polyfills-es5.fe66ca5cea6ec294366b.js  polyfills.3868c335bc6f54a49ebb.js  polyfills.50f17b80209558317d0e.bundle.js  polyfills.fba976831c2040c109ff.js  runtime.157bb2e504e1896d2278.js  runtime.aa1ff9ef4e9e45f02433.js  styles.62a599bfd251b6a66f32.bundle.css  styles.css  styles.d080467d76c0ccbccf57.css  styles.dca71c0bb4830e83e0a1.css  test.ts  (+5 more)
modules/schematics-core/: .eslintrc.json  BUILD  BUILD.bazel  README.md  eslint.config.mjs  index.ts  jest.config.js  jest.config.ts  package.json  project.json  tsconfig-build.json  tsconfig.lib.json  tsconfig.spec.json
modules/schematics-core/testing/: create-package.ts  create-reducers.ts  create-workspace.ts  index.ts  update.ts
modules/schematics-core/utility/: angular-utils.ts  ast-utils.ts  change.ts  config.ts  find-module.ts  libs-version.ts  project.ts  standalone.ts  update.ts  visit-utils.ts
(+4277 files in other folders)
