package(default_visibility=["//visibility:public"])
load("@build_bazel_rules_nodejs//:defs.bzl", "node_modules_filegroup")

# Needed so that tsconfig.json can be referenced from BUILD rules.
exports_files([
    "tsconfig.json",
    "LICENSE",
])

node_modules_filegroup(
    name="node_modules",
    # NB: rxjs is not in this list, because we build it from sources using the
    # label @rxjs//:rxjs
    packages=[
        "@angular",
        "@angular-devkit",
        "jasmine",
        "jasmine-marbles",
        "typescript",
        "@types",
        "tsickle",
    ],
)
