package(default_visibility = ["//visibility:public"])

# Needed so that tsconfig.json can be referenced from BUILD rules.
exports_files([
    "tsconfig.json",
    "LICENSE",
])

filegroup(
    name = "node_modules",
    srcs = glob(["/".join([
        "node_modules",
        pkg,
        "**",
        ext,
    ]) for pkg in [
        "@angular",
        "@angular-devkit",
        "@schematics",
        "@types",
        "bytebuffer",
        "hammerjs",
        "jasmine",
        "long",
        "minimist",
        "moment",
        "parse5",
        "protobufjs",
        "protractor",
        "reflect-metadata",
        "tslib",
        "tslint",
        "tsutils",
        "typescript",
        "zone.js",
        "jasmine-marbles",
        "core-js",
        "jasmine-core",
        "lodash",
        "deep-freeze",
    ] for ext in [
        "*.js",
        "*.json",
        "*.d.ts",
    ]]),
)
