load("//tools:defaults.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "schematics-core",
    srcs = glob(
        [
            "**/*.ts",
        ],
    ),
    deps = [
        "@npm//@angular-devkit/core",
        "@npm//@angular-devkit/schematics",
        "@npm//rxjs",
        "@npm//tslib",
        "@npm//typescript",
    ],
)
